Avoid jumping of text when font size is readjusted when page is loaded

--- a/www/_code_old/nittioold.css
+++ b/www/_code_old/nittioold.css
@@ -1048,6 +1048,11 @@ td.submitselection{
   padding: 0;
 }
 
+.njsSlides > section.loading > .pgHolder {    
+  opacity: 0;
+  pointer-events: none; 
+}
+
 .njsSlides > section > .pgMask {
   position: absolute;
   left: 0;
